Render animation does not respect render single view layer #57247

Closed
opened 2018-10-15 16:31:43 +02:00 by Marcus Papathoma · 16 comments

System Information
Window 10 Pro x64
Nvidia Geforce 1080 Ti
Nivdia Titan V

Blender Version
Broken: blender-2.80.0-git.55e3c17ccc1-windows64

Short description of error
Viewlayer - Render Single Layer option not working per Viewlayer.
If you switch it (Render Single Layer option) on it is on on all view layers. If you switch it off it is off on all view layers. Therefore it is useless and not working as expected.
You are not able to only render one specific view layer by stetting this option.

Exact steps for others to reproduce the error
Open the attached *.blend file.
In the Properties Viewlayer Tab uncheck "Render Single Layer"
Switch the active workspace from View Layer to View Layer.001
Render Single Layer is unchecked there, check it and switch back to View Layer
Render Single Layer is checked altough you unchecked it before. (In the moment this option is not viewlayer exclusive)
Render Single Layer not working per Viewlayer.blend

**System Information** Window 10 Pro x64 Nvidia Geforce 1080 Ti Nivdia Titan V **Blender Version** Broken: blender-2.80.0-git.55e3c17ccc1-windows64 **Short description of error** Viewlayer - Render Single Layer option not working per Viewlayer. If you switch it (Render Single Layer option) on it is on on all view layers. If you switch it off it is off on all view layers. Therefore it is useless and not working as expected. You are not able to only render one specific view layer by stetting this option. **Exact steps for others to reproduce the error** Open the attached *.blend file. In the Properties Viewlayer Tab uncheck "Render Single Layer" Switch the active workspace from View Layer to View Layer.001 Render Single Layer is unchecked there, check it and switch back to View Layer Render Single Layer is checked altough you unchecked it before. (In the moment this option is not viewlayer exclusive) [Render Single Layer not working per Viewlayer.blend](https://archive.blender.org/developer/F5078206/Render_Single_Layer_not_working_per_Viewlayer.blend)

Added subscriber: @machieb

Added subscriber: @machieb
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Philipp Oeser self-assigned this 2018-10-16 10:09:18 +02:00
Member

You are right, this is not a per-viewplayer option, but instead a scene render setting.

Only render the active layer. Only affects rendering from the interface, ignored for rendering from command line

So whenever this option is ON, it will render only the currently active viewlayer (so you can "render one specific view layer" -- namely the active one).
Switch to View Layer (blender will then only render that), switch to View Layer.001 (blender will then only render that)
It's the same as using the "pin" icon in 2.79 described here .

also quoting from d7b472c198:

The issue was caused by Render Single Layer option enabled, which is
very handy for artists work, so they can hit F12 and see view layer
they are currently working in a final rendered state. This saves a lot
of time since all the "non-interesting" objects are ignored for such
iterations.

If you want control over per-viewlayer usage in render, you can use the User for Rendering per-viewlayer setting...

Closing this as not-a-bug.

You are right, this is not a per-viewplayer option, but instead a scene render setting. > Only render the active layer. Only affects rendering from the interface, ignored for rendering from command line So whenever this option is ON, it will render only the currently active viewlayer (so you can "render one specific view layer" -- namely the **active** one). Switch to `View Layer` (blender will then only render that), switch to `View Layer.001` (blender will then only render that) It's the same as using the "pin" icon in 2.79 described [here ](https://docs.blender.org/manual/en/dev/render/post_process/layers.html#layer-list). also quoting from d7b472c198: > The issue was caused by Render Single Layer option enabled, which is > very handy for artists work, so they can hit F12 and see view layer > they are currently working in a final rendered state. This saves a lot > of time since all the "non-interesting" objects are ignored for such > iterations. If you want control over per-viewlayer usage in render, you can use the `User for Rendering` per-viewlayer setting... Closing this as not-a-bug.

Yes I know how it should work. But if you switch to the attached scene scene to the View Layer.001 with the option Render Single Layer on, Blender is rendering not that layer, but the first View Layer because the option is also set there and the first View Layer is only rendered.
So to say it clear. If the option is on it only renders the first renderlayer in the row, whatever View Layer you have currently active in your view and want to render.
It is not possible to render only a special View Layer!
I hope you understand what I mean?

Yes I know how it should work. But if you switch to the attached scene scene to the View Layer.001 with the option Render Single Layer on, Blender is rendering not that layer, but the first View Layer because the option is also set there and the first View Layer is only rendered. So to say it clear. If the option is on it only renders the first renderlayer in the row, whatever View Layer you have currently active in your view and want to render. It is not possible to render only a special View Layer! I hope you understand what I mean?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

I cannot reproduce.

If I switch to View Layer.001 I get one cube rendered, if I switch to View Layer I get two cubes rendered...
(this is rendering from the Interface btw.)

  • Are you rendering from the commandline?
  • Could you show us that you have View Layer.001 active and the render is wrong (screenshot)?

reg. "because the option is also set there": to repeat: the option is a per-scene option (not a per-viewlayer option)

I cannot reproduce. If I switch to `View Layer.001` I get one cube rendered, if I switch to `View Layer` I get two cubes rendered... (this is rendering from the Interface btw.) - Are you rendering from the commandline? - Could you show us that you have `View Layer.001` active and the render is wrong (screenshot)? reg. "because the option is also set there": to repeat: the option is a **per-scene** option (not a **per-viewlayer** option)

Try this file. The are three View Layer called after the primitives that are inside.
Hit Render Animation (Ctrl-F12)
In the image editor you can see all three View Layer rendered.
Select the cylinder and move it slightly to the left.
Switch to View Layer Cone and move it also a little bit to the left.
Switch to View Layer Cube and move the cube to the left so that you can see a difference to the old rendering.
While you are in the Cube View Layer switch the option Render Single Layer on.
Switch to the Cone View Layer - here the option Render Single Layer is now also on.
Hit Render Animation (Ctrl-F12)
Not the Cone View Layer where I´m in, but the Cube View Layer is rendered! Why?

Render Single Layer not working per Viewlayer.blend

Try this file. The are three View Layer called after the primitives that are inside. Hit Render Animation (Ctrl-F12) In the image editor you can see all three View Layer rendered. Select the cylinder and move it slightly to the left. Switch to View Layer Cone and move it also a little bit to the left. Switch to View Layer Cube and move the cube to the left so that you can see a difference to the old rendering. While you are in the Cube View Layer switch the option Render Single Layer on. Switch to the Cone View Layer - here the option Render Single Layer is now also on. Hit Render Animation (Ctrl-F12) Not the Cone View Layer where I´m in, but the Cube View Layer is rendered! Why? [Render Single Layer not working per Viewlayer.blend](https://archive.blender.org/developer/F5090451/Render_Single_Layer_not_working_per_Viewlayer.blend)

In the Screenshot you can see as described above that, I´m in the cone View Layer and the option Render Single Layer is set to on.
But it renders the Cube View Layer not the View Layer that I´m currently in.
If you switch to the Cylinder View Layer with Render Single Layer on it again renders the Cube View Layer if you hit Ctrl+F12.

In the Screenshot you can see as described above that, I´m in the cone View Layer and the option Render Single Layer is set to on. But it renders the Cube View Layer not the View Layer that I´m currently in. If you switch to the Cylinder View Layer with Render Single Layer on it again renders the Cube View Layer if you hit Ctrl+F12.

Blender_View_Layer_bug.JPG

![Blender_View_Layer_bug.JPG](https://archive.blender.org/developer/F5090545/Blender_View_Layer_bug.JPG)
Brecht Van Lommel changed title from View Layer - Render Single Layer option not working per Viewlayer to Render animation does not respect render single view layer 2018-10-16 11:51:07 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Ok, so the issue is that render animation does not work.

Ok, so the issue is that render animation does not work.
Member

Ah, yes, there's a difference between F12 and Ctrl+F12... (working in master btw.)

Ah, yes, there's a difference between F12 and Ctrl+F12... (working in master btw.)

This issue was referenced by 345175082b

This issue was referenced by 345175082b1387270988f0d61fd43f09bbcf6afd
Member

D3800 actually seems to fix & survive (limited) tests (but not totally sure if other problems might arise...)

[D3800](https://archive.blender.org/developer/D3800) actually seems to fix & survive (limited) tests (but not totally sure if other problems might arise...)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57247
No description provided.