Fix T57247: Render animation does not respect render single view layer

Reviewers: brecht

Maniphest Tasks: T57247

Differential Revision: https://developer.blender.org/D3800