source/blender/render/extern/include/RE_pipeline.h
@@ -279,7 +279,8 @@ bool RE_WriteRenderViewsMovie(
 void RE_BlenderFrame(struct Render *re, struct Main *bmain, struct Scene *scene,
                      struct ViewLayer *single_layer, struct Object *camera_override,
                      int frame, const bool write_still);
-void RE_BlenderAnim(struct Render *re, struct Main *bmain, struct Scene *scene, struct Object *camera_override,
+void RE_BlenderAnim(struct Render *re, struct Main *bmain, struct Scene *scene,
+                    struct ViewLayer *single_layer, struct Object *camera_override,
                     int sfra, int efra, int tfra);
 #ifdef WITH_FREESTYLE
 void RE_RenderFreestyleStrokes(struct Render *re, struct Main *bmain, struct Scene *scene, int render);
